--- a/flight/templates/flight/flightsearch.html
+++ b/flight/templates/flight/flightsearch.html
@@ -12,12 +12,12 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
 {% block body %}
     <style>
         table, td, th {
-            border: 10px solid mediumpurple;
+            border: 10px solid #ffffff;
             padding: 50px;
         }
         td, th {
             text-align:center;
-            color: mediumorchid;
+            color: #ffffff;
         }
         table{
             width: 100%;
