--- a/flight/templates/flight/flight.html
+++ b/flight/templates/flight/flight.html
@@ -97,117 +97,117 @@
         </div>
 
 
-{#        <div class="container py-4">#}
-{#            <div class="p-5 mb-4 bg-light text-dark rounded-3">#}
-{#                <h2>Create a new record</h2>#}
-{#                <form method="POST" ID="create" action={{url_for('flight.create')}} >#}
-{#                    <table class="table">#}
-{#                        <thead>#}
-{#                        <tr>#}
-{#                            <th><label for="name">Name</label></th>#}
-{#                            <th><label for="departingLocation">Departing Location</label></th>#}
-{#                            <th><label for="arrivalLocation">arrivalLocation</label></th>#}
-{#                            <th><label for="departingTime">Departing Time</label></th>#}
-{#                            <th><label for="arrivalTime">Arrival Time</label></th>#}
-{#                        </tr>#}
-{#                        </thead>#}
-{#                        <tbody>#}
-{#                        <tr>#}
-{#                            <td><input type="text" name="name" id="name" required></td>#}
-{#                            <td><input type="departingLocation" name="departingLocation" id="departingLocation" placeholder="abc@xyz.org" required></td>#}
-{#                            <td><input type="arrivalLocation" name="arrivalLocation" id="arrivalLocation" required></td>#}
-{#                            <td><input type="departingTime" name="departingTime" id="departingTime" required></td>#}
-{#                            <td><input type="arrivalTime" name="arrivalTime" id="arrivalTime" required></td>#}
-{#                            <td><input type="submit" value="Create"></td>#}
-{#                        </tr>#}
-{#                        </tbody>#}
-{#                    </table>#}
-{#                    <p id="pswError"></p>#}
-{#                </form>#}
-{#            </div>#}
-{##}
-{#        </div>#}
+        <div class="container py-4">
+            <div class="p-5 mb-4 bg-light text-dark rounded-3">
+                <h2>Create a new record</h2>
+                <form method="POST" ID="create" action={{url_for('flight.create')}} >
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th><label for="name">Name</label></th>
+                            <th><label for="departingLocation">Departing Location</label></th>
+                            <th><label for="arrivalLocation">arrivalLocation</label></th>
+                            <th><label for="departingTime">Departing Time</label></th>
+                            <th><label for="arrivalTime">Arrival Time</label></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td><input type="text" name="name" id="name" required></td>
+                            <td><input type="departingLocation" name="departingLocation" id="departingLocation" placeholder="abc@xyz.org" required></td>
+                            <td><input type="arrivalLocation" name="arrivalLocation" id="arrivalLocation" required></td>
+                            <td><input type="departingTime" name="departingTime" id="departingTime" required></td>
+                            <td><input type="arrivalTime" name="arrivalTime" id="arrivalTime" required></td>
+                            <td><input type="submit" value="Create"></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <p id="pswError"></p>
+                </form>
+            </div>
 
-{#        <div class="container py-4">#}
-{##}
-{#            <div class="row mb-4 bg-light text-dark rounded-3">#}
-{##}
-{#                <div class="col-md-3">#}
-{#                    <div class="p-5 mb-4 bg-light text-dark rounded-3">#}
-{#                        <h2>Read</h2>#}
-{#                        <form method="POST" ID="read" action={{url_for('flight.read')}} >#}
-{#                            <table id="read_table">#}
-{#                                <tr><th><label for="read_flightid">ID</label></th></tr>#}
-{#                                <tr>#}
-{#                                    <td>#}
-{#                                        <select name="flightid" id="read_flightid">#}
-{#                                            <optgroup label="flightid">#}
-{#                                                {% for row in table %}#}
-{#                                                    <option label="{{ row['flightID'] }}">{{ row['flightID'] }}</option>#}
-{#                                                {% endfor %}#}
-{#                                            </optgroup>#}
-{#                                        </select>#}
-{#                                    </td>#}
-{#                                    <td>#}
-{#                                        <input type="submit" value="Read">#}
-{#                                    </td>#}
-{#                                </tr>#}
-{#                            </table>#}
-{#                        </form>#}
-{#                    </div>#}
-{#                </div>#}
+        </div>
 
-{#                <div class="col-md-6">#}
-{#                    <div class="p-5 mb-4 bg-light text-dark rounded-3">#}
-{#                        <h2>Update</h2>#}
-{#                        <form method="POST" ID="update" action={{url_for('flight.update')}} >#}
-{#                            <table id="update_table">#}
-{#                                <tr>#}
-{#                                    <th><label for="update_flightid">ID</label></th>#}
-{#                                    <th><label for="update_name">Name</label></th>#}
-{#                                </tr>#}
-{#                                <tr>#}
-{#                                    <td>#}
-{#                                        <select name="flightid" id="update_flightid">#}
-{#                                            <optgroup label="flightid">#}
-{#                                                {% for row in table %}#}
-{#                                                    <option label="{{ row['flightid'] }}">{{ row['flightid'] }}</option>#}
-{#                                                {% endfor %}#}
-{#                                            </optgroup>#}
-{#                                        </select>#}
-{#                                    </td>#}
-{#                                    <td><input type="text" name="name" id="update_name" required></td>#}
-{#                                    <td><input type="submit" value="Update"></td>#}
-{#                                </tr>#}
-{#                            </table>#}
-{#                        </form>#}
-{#                    </div>#}
-{#                </div>#}
-{##}
-{#                <div class="col-md-3">#}
-{#                    <div class="p-5 mb-4 bg-light text-dark rounded-3">#}
-{#                        <h2>Delete</h2>#}
-{#                        <form method="POST" ID="read" action={{url_for('flight.delete')}} >#}
-{#                            <table id="read_table">#}
-{#                                <tr><th><label for="delete_flightid">ID</label></th></tr>#}
-{#                                <tr>#}
-{#                                    <td>#}
-{#                                        <select name="flightid" id="delete_flightid">#}
-{#                                            <optgroup label="flightid">#}
-{#                                                {% for row in table %}#}
-{#                                                    <option label="{{ row['flightID'] }}">{{ row['flightID'] }}</option>#}
-{#                                                {% endfor %}#}
-{#                                            </optgroup>#}
-{#                                        </select>#}
-{#                                    </td>#}
-{#                                    <td><input type="submit" value="Delete"></td>#}
-{#                                </tr>#}
-{#                            </table>#}
-{#                        </form>#}
-{#                    </div>#}
-{#                </div>#}
-{##}
-{#            </div>#}
+        <div class="container py-4">
+
+            <div class="row mb-4 bg-light text-dark rounded-3">
+
+                <div class="col-md-3">
+                    <div class="p-5 mb-4 bg-light text-dark rounded-3">
+                        <h2>Read</h2>
+                        <form method="POST" ID="read" action={{url_for('flight.read')}} >
+                            <table id="read_table">
+                                <tr><th><label for="read_flightid">ID</label></th></tr>
+                                <tr>
+                                    <td>
+                                        <select name="flightid" id="read_flightid">
+                                            <optgroup label="flightid">
+                                                {% for row in table %}
+                                                    <option label="{{ row['flightID'] }}">{{ row['flightID'] }}</option>
+                                                {% endfor %}
+                                            </optgroup>
+                                        </select>
+                                    </td>
+                                    <td>
+                                        <input type="submit" value="Read">
+                                    </td>
+                                </tr>
+                            </table>
+                        </form>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="p-5 mb-4 bg-light text-dark rounded-3">
+                        <h2>Update</h2>
+                        <form method="POST" ID="update" action={{url_for('flight.update')}} >
+                            <table id="update_table">
+                                <tr>
+                                    <th><label for="update_flightid">ID</label></th>
+                                    <th><label for="update_name">Name</label></th>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <select name="flightid" id="update_flightid">
+                                            <optgroup label="flightid">
+                                                {% for row in table %}
+                                                    <option label="{{ row['flightid'] }}">{{ row['flightid'] }}</option>
+                                                {% endfor %}
+                                            </optgroup>
+                                        </select>
+                                    </td>
+                                    <td><input type="text" name="name" id="update_name" required></td>
+                                    <td><input type="submit" value="Update"></td>
+                                </tr>
+                            </table>
+                        </form>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="p-5 mb-4 bg-light text-dark rounded-3">
+                        <h2>Delete</h2>
+                        <form method="POST" ID="read" action={{url_for('flight.delete')}} >
+                            <table id="read_table">
+                                <tr><th><label for="delete_flightid">ID</label></th></tr>
+                                <tr>
+                                    <td>
+                                        <select name="flightid" id="delete_flightid">
+                                            <optgroup label="flightid">
+                                                {% for row in table %}
+                                                    <option label="{{ row['flightID'] }}">{{ row['flightID'] }}</option>
+                                                {% endfor %}
+                                            </optgroup>
+                                        </select>
+                                    </td>
+                                    <td><input type="submit" value="Delete"></td>
+                                </tr>
+                            </table>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
 
         </div>
 
