--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -58,6 +58,7 @@
                     <a class="dropdown-item" href="{{ url_for('bchase.enclosures') }}">Enclosures</a>
                     <a class="dropdown-item" href="{{ url_for('btanay.pethistory') }}">Pet History</a>
                     <a class="dropdown-item" href="{{ url_for('bchase.h2') }}">How To Care For Abandoned Pets</a>
+                    <a class="dropdown-item" href="{{ url_for('btanay.costcalculator') }}">Manage Finances</a>
 
                 </div>
         </li>
