--- a/crud/templates/crud/search.html
+++ b/crud/templates/crud/search.html
@@ -5,7 +5,7 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
 {% extends "layouts/base.html" %}
 
 {% block head %}
-<title>SQL search</title>
+    <title>SQL search</title>
 {% endblock %}
 
 {% block body %}
@@ -31,9 +31,25 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
             </div>
         </div>
     </div>
+
+
     <!-- result of search -->
-    <div class="container">
-        <div class="row" id="result">
+    <div class="container py-4" style="background-color:black; color:white">
+        <div class="row">
+            <div class="col-sm">
+                Name
+            </div>
+            <div class="col-sm">
+                Email
+            </div>
+            <div class="col-sm">
+                Phone Number
+            </div>
+            <div class="col-sm">
+                Feedback
+            </div>
+            <div id="result">
+            </div>
         </div>
     </div>
 
@@ -55,33 +71,38 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
                     "content-type": "application/json"
                 })
             })
-            // async then replies with response header
-            .then(function (response) {
-                // prepare HTML search result container for new output
-                const resultContainer = document.getElementById("result");
-                // clean up from previous search
-                while (resultContainer.firstChild) {
-                    resultContainer.removeChild(resultContainer.firstChild);
-                }
-                // trap error response from Web API
-                if (response.status !== 200) {
-                    const errorMsg = 'Database response error: ' + response.status;
-                    console.log(errorMsg);
-                    const div = document.createElement("div");
-                    div.innerHTML = errorMsg;
-                    resultContainer.appendChild(div);
-                    return;
-                }
-                // response contains valid result
-                response.json().then(function(data) {
-                    // loop through JSON and build HTML output
-                    for (let i = 0; i < data.length; i++) {
-                        const div = document.createElement("div");
-                        div.innerHTML = data[i].name + ' ' + data[i].email;
-                        resultContainer.appendChild(div);
+                // async then replies with response header
+                .then(function (response) {
+                    // prepare HTML search result container for new output
+                    const resultContainer = document.getElementById("result");
+                    // clean up from previous search
+                    while (resultContainer.firstChild) {
+                        resultContainer.removeChild(resultContainer.firstChild);
                     }
+                    // trap error response from Web API
+                    if (response.status !== 200) {
+                        const errorMsg = 'Database response error: ' + response.status;
+                        console.log(errorMsg);
+                        const div = document.createElement("div");
+                        div.innerHTML = errorMsg;
+                        resultContainer.appendChild(div);
+                        return;
+                    }
+                    // response contains valid result
+
+                    response.json().then(function(data) {
+                        // loop through JSON and build HTML output
+                        const div = document.createElement("div")
+                        // add all rows to grid with loop
+                        let grid = ""
+                        for (let i = 0; i < data.length; i++) {
+                            grid += "<div class='row'>" + "<div class='col'>" + data[i].name + "</div><div class='col'>" + data[i].email + "</div><div class='col'>" + data[i].phone + "</div><div class='col'>" + data[i].feedback + "</div></div>";
+                        }
+                        // update HTML with table
+                        div.innerHTML = grid;
+                        resultContainer.appendChild(div);
+                    })
                 })
-            })
         }
     </script>
 {% endblock %}
