--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -7,7 +7,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
 <style>
     .navbar{
         max-height: 75px;
-
+        margin;
     }
     .logo-image{
         width: 75px;
@@ -96,9 +96,10 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <li class="nav-item"><a class="nav-link" href="{{ url_for('search') }}">Search</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('dark') }}">Dark Mode</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('forum') }}">Forum</a></li>
+                </div>
         </ul>
-    </div>
-            </li>
+
+    </li>
 </nav>
 </html> </body>
 </html>
