--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -59,6 +59,7 @@
                     <a class="dropdown-item" href="{{ url_for('btanay.pethistory') }}">Pet History</a>
                     <a class="dropdown-item" href="{{ url_for('bchase.h2') }}">How To Care For Abandoned Pets</a>
                     <a class="dropdown-item" href="{{ url_for('btanay.costcalculator') }}">Manage Finances</a>
+                    <a class="dropdown-item" href="{{ url_for('btanay.todo') }}">To-Do List</a>
 
                 </div>
         </li>
