planner page start

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -102,6 +102,7 @@
                 <a class="nav-link" href="{{ url_for('travel.weather') }}">Weather</a>
                 <a class="nav-link" href="{{ url_for('travel.carrental') }}">Cars</a>
                 <a class="nav-link" href="{{ url_for('travel.places') }}">Countries</a>
+                <a class="nav-link" href="{{ url_for('travel.planner') }}">Travel Planner</a>
             </div>
         </li>
     </div>
@@ -123,6 +124,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="nav-link" href="{{ url_for('crud.crud') }}">Crud</a>
                 <a class="nav-link" href="{{ url_for('crud.search') }}">Crud Search</a>
+                <a class="nav-link" href="{{ url_for('crud_api.crud_api') }}">Crud Async</a>
                 <a class="nav-link" href="{{ url_for('database.database') }}">Reviews</a>
                 <a class="nav-link" href="{{ url_for('database.search') }}"> Reviews Search</a>
             </div>
