--- a/templates/pbl/planner.html
+++ b/templates/pbl/planner.html
@@ -11,7 +11,7 @@
     <!-- Editable table -->
     <div class="card">
         <h3 class="card-header text-center font-weight-bold text-uppercase py-4">
-            Editable table
+            Travel Planner
         </h3>
         <div class="card-body">
             <div id="table" class="table-editable">
@@ -22,115 +22,16 @@
                 <table class="table table-bordered table-responsive-md table-striped text-center">
                     <thead>
                     <tr>
-                        <th class="text-center">Person Name</th>
-                        <th class="text-center">Age</th>
-                        <th class="text-center">Company Name</th>
-                        <th class="text-center">Country</th>
+                        <th class="text-center">Activity</th>
+                        <th class="text-center">Date</th>
+                        <th class="text-center">Start Time</th>
+                        <th class="text-center">End Time</th>
                         <th class="text-center">City</th>
                         <th class="text-center">Sort</th>
                         <th class="text-center">Remove</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td class="pt-3-half" contenteditable="true">Aurelia Vega</td>
-                        <td class="pt-3-half" contenteditable="true">30</td>
-                        <td class="pt-3-half" contenteditable="true">Deepends</td>
-                        <td class="pt-3-half" contenteditable="true">Spain</td>
-                        <td class="pt-3-half" contenteditable="true">Madrid</td>
-                        <td class="pt-3-half">
-              <span class="table-up"
-              ><a href="#!" class="indigo-text"
-              ><i class="fas fa-long-arrow-alt-up" aria-hidden="true"></i></a
-              ></span>
-                            <span class="table-down"
-                            ><a href="#!" class="indigo-text"
-                            ><i class="fas fa-long-arrow-alt-down" aria-hidden="true"></i></a
-                            ></span>
-                        </td>
-                        <td>
-              <span class="table-remove"
-              ><button type="button" class="btn btn-danger btn-rounded btn-sm my-0">
-                  Remove
-                </button></span
-              >
-                        </td>
-                    </tr>
-                    <!-- This is our clonable table line -->
-                    <tr>
-                        <td class="pt-3-half" contenteditable="true">Guerra Cortez</td>
-                        <td class="pt-3-half" contenteditable="true">45</td>
-                        <td class="pt-3-half" contenteditable="true">Insectus</td>
-                        <td class="pt-3-half" contenteditable="true">USA</td>
-                        <td class="pt-3-half" contenteditable="true">San Francisco</td>
-                        <td class="pt-3-half">
-              <span class="table-up"
-              ><a href="#!" class="indigo-text"
-              ><i class="fas fa-long-arrow-alt-up" aria-hidden="true"></i></a
-              ></span>
-                            <span class="table-down"
-                            ><a href="#!" class="indigo-text"
-                            ><i class="fas fa-long-arrow-alt-down" aria-hidden="true"></i></a
-                            ></span>
-                        </td>
-                        <td>
-              <span class="table-remove"
-              ><button type="button" class="btn btn-danger btn-rounded btn-sm my-0">
-                  Remove
-                </button></span
-              >
-                        </td>
-                    </tr>
-                    <!-- This is our clonable table line -->
-                    <tr>
-                        <td class="pt-3-half" contenteditable="true">Guadalupe House</td>
-                        <td class="pt-3-half" contenteditable="true">26</td>
-                        <td class="pt-3-half" contenteditable="true">Isotronic</td>
-                        <td class="pt-3-half" contenteditable="true">Germany</td>
-                        <td class="pt-3-half" contenteditable="true">Frankfurt am Main</td>
-                        <td class="pt-3-half">
-              <span class="table-up"
-              ><a href="#!" class="indigo-text"
-              ><i class="fas fa-long-arrow-alt-up" aria-hidden="true"></i></a
-              ></span>
-                            <span class="table-down"
-                            ><a href="#!" class="indigo-text"
-                            ><i class="fas fa-long-arrow-alt-down" aria-hidden="true"></i></a
-                            ></span>
-                        </td>
-                        <td>
-              <span class="table-remove"
-              ><button type="button" class="btn btn-danger btn-rounded btn-sm my-0">
-                  Remove
-                </button></span
-              >
-                        </td>
-                    </tr>
-                    <!-- This is our clonable table line -->
-                    <tr class="hide">
-                        <td class="pt-3-half" contenteditable="true">Elisa Gallagher</td>
-                        <td class="pt-3-half" contenteditable="true">31</td>
-                        <td class="pt-3-half" contenteditable="true">Portica</td>
-                        <td class="pt-3-half" contenteditable="true">United Kingdom</td>
-                        <td class="pt-3-half" contenteditable="true">London</td>
-                        <td class="pt-3-half">
-              <span class="table-up"
-              ><a href="#!" class="indigo-text"
-              ><i class="fas fa-long-arrow-alt-up" aria-hidden="true"></i></a
-              ></span>
-                            <span class="table-down"
-                            ><a href="#!" class="indigo-text"
-                            ><i class="fas fa-long-arrow-alt-down" aria-hidden="true"></i></a
-                            ></span>
-                        </td>
-                        <td>
-              <span class="table-remove"
-              ><button type="button" class="btn btn-danger btn-rounded btn-sm my-0">
-                  Remove
-                </button></span
-              >
-                        </td>
-                    </tr>
                     </tbody>
                 </table>
             </div>
@@ -143,11 +44,11 @@
     const $tableID = $('#table'); const $BTN = $('#export-btn'); const $EXPORT = $('#export');
     const newTr = `
     <tr class="hide">
-        <td class="pt-3-half" contenteditable="true">Example</td>
-        <td class="pt-3-half" contenteditable="true">Example</td>
-        <td class="pt-3-half" contenteditable="true">Example</td>
-        <td class="pt-3-half" contenteditable="true">Example</td>
-        <td class="pt-3-half" contenteditable="true">Example</td>
+        <td class="pt-3-half" contenteditable="true">Enter Activity</td>
+        <td class="pt-3-half" contenteditable="true">Enter Date</td>
+        <td class="pt-3-half" contenteditable="true">Enter Start Time</td>
+        <td class="pt-3-half" contenteditable="true">Enter End Time</td>
+        <td class="pt-3-half" contenteditable="true">Enter City</td>
         <td class="pt-3-half">
     <span class="table-up"
     ><a href="#!" class="indigo-text"
