Fixed website for school wifi

--- a/templates/fortnite.html
+++ b/templates/fortnite.html
@@ -1,23 +1,17 @@
 {% include "layouts/navbar.html" %}
 <!DOCTYPE html>
-<html lang="en">
-<head>
+</html lang="en">
+</head>
     <meta charset="UTF-8">
-    <title>Fortnite</title
+    <title>Fortnite</title>
         <head>
             <style>
 </style>
             <style>
 body {
-  background-image: url('https://th.bing.com/th/id/R.0f9a5b95063c7b60c0626f2a0d1e8a19?rik=6O77im8luB2r6Q&riu=http%3a%2f%2fhdqwalls.com%2fwallpapers%2fblue-texture-pf.jpg&ehk=5scFBlu80F%2fkeTqViHUXi3pqxoWYb9x1JsqH4jyXyKI%3d&risl=&pid=ImgRaw&r=0');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
+ background-image: url("/static/assets/Fortnite/fortnite_background.jpg");
 }
-
 </style>
-
-
 
     <style>
 
@@ -65,110 +59,116 @@ body {
 </style>
 
 
+    <button onclick="scrollWin()" style="position:fixed">Pickaxe</button><br><br>
+    <script>
+function scrollWin() {
+  window.scrollTo(0, 1000);
+}
+</script>
 
 <table>
     <tr>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/black-knight-icon.png"/>
+            <img src="/static/assets/Fortnite/black-knight-icon.png"/>
             <div class="hovercap">Black Knight Release Date</div></div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/blue-squire-icon.png"/>
+            <img src="/static/assets/Fortnite/blue-squire-icon.png"/>
             <div class="hovercap">Blue Squire</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/sparkle-specialist-icon.png"/>
+            <img src="/static/assets/Fortnite/sparkle-specialist-icon.png"/>
             <div class="hovercap">Sparkle Specialist</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/dark-voyager-icon.png"/>
+            <img src="/static/assets/Fortnite/dark-voyager-icon.png"/>
             <div class="hovercap">Dark Voyager</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/elite-agent-icon.png"/>
+            <img src="/static/assets/Fortnite/elite-agent-icon.png"/>
             <div class="hovercap">Elite Agent</div> </div></td>
     </tr>
     <tr>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/mission-specialist-icon.png"/>
+            <img src="/static/assets/Fortnite/mission-specialist-icon.png"/>
             <div class="hovercap">Mission Specialist</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/moonwalker-icon.png"/>
+            <img src="/static/assets/Fortnite/moonwalker-icon.png"/>
             <div class="hovercap">Moonwalker</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/rust-lord-icon.png"/>
+            <img src="/static/assets/Fortnite/rust-lord-icon.png"/>
             <div class="hovercap">Rust Lord</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/the-reaper-icon.png"/>
+            <img src="/static/assets/Fortnite/the-reaper-icon.png"/>
             <div class="hovercap">The Reaper</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/aerial-assault-trooper-icon.png"/>
+            <img src="/static/assets/Fortnite/aerial-assault-trooper-icon.png"/>
             <div class="hovercap">Aerial Assault Trooper</div> </div></td>
     </tr>
     <tr>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/renegade-raider-icon.png"/>
+            <img src="/static/assets/Fortnite/renegade-raider-icon.png"/>
             <div class="hovercap">Renegade Raider</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/first-strike-specialist-icon.png"/>
+            <img src="/static/assets/Fortnite/first-strike-specialist-icon.png"/>
             <div class="hovercap">First Strike Specialist</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/ghoul-trooper-icon.png"/>
+            <img src="/static/assets/Fortnite/ghoul-trooper-icon.png"/>
             <div class="hovercap">Ghoul Trooper</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/recon-expert-icon.png"/>
+            <img src="/static/assets/Fortnite/recon-expert-icon.png"/>
             <div class="hovercap">Recon Expert</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/skull-trooper-icon.png"/>
+            <img src="/static/assets/Fortnite/skull-trooper-icon.png"/>
             <div class="hovercap">Skull Trooper</div> </div></td>
     </tr>
     <tr>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/munitions-expert-icon.png"/>
+            <img src="/static/assets/Fortnite/munitions-expert-icon.png"/>
             <div class="hovercap">Munitions Expert</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/burnout-icon.png"/>
+            <img src="/static/assets/Fortnite/burnout-icon.png"/>
             <div class="hovercap">Burnout ---------- K</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/rex-icon.png"/>
+            <img src="/static/assets/Fortnite/rex-icon.png"/>
             <div class="hovercap">Rex</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/power-chord-icon.png"/>
+            <img src="/static/assets/Fortnite/power-chord-icon.png"/>
             <div class="hovercap">Power Chord</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/tricera-ops-icon.png"/>
+            <img src="/static/assets/Fortnite/tricera-ops-icon.png"/>
             <div class="hovercap">Tricera Ops</div> </div></td>
     </tr>
     <tr>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/rabbit-raider-icon.png"/>
+            <img src="/static/assets/Fortnite/rabbit-raider-icon.png"/>
             <div class="hovercap">Rabbit Raider</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/bunny-brawler-icon.png"/>
+            <img src="/static/assets/Fortnite/bunny-brawler-icon.png"/>
             <div class="hovercap">Bunny Brawler</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/brite-gunner-icon.png"/>
+            <img src="/static/assets/Fortnite/brite-gunner-icon.png"/>
             <div class="hovercap">Brite Gunner</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/whiplash-icon.png"/>
+            <img src="/static/assets/Fortnite/whiplash-icon.png"/>
             <div class="hovercap">Whiplash</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/tomatohead-icon.png"/>
+            <img src="/static/assets/Fortnite/tomatohead-icon.png"/>
             <div class="hovercap">Tomatohead</div> </div></td>
     </tr>
     <tr>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/omega-icon.png"/>
+            <img src="/static/assets/Fortnite/omega-icon.png"/>
             <div class="hovercap">Omega</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/carbide-icon.png"/>
+            <img src="/static/assets/Fortnite/carbide-icon.png"/>
             <div class="hovercap">Carbide</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/teknique-icon.png"/>
+            <img src="/static/assets/Fortnite/teknique-icon.png"/>
             <div class="hovercap">Teknique</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/jumpshot-icon.png"/>
+            <img src="/static/assets/Fortnite/jumpshot-icon.png"/>
             <div class="hovercap">Jumpshot</div> </div></td>
         <td><div class="hoverwrap">
-            <img src="https://tryhardguides.com/wp-content/uploads/2021/08/triple-threat-icon.png"/>
+            <img src="/static/assets/Fortnite/triple-threat-icon.png"/>
             <div class="hovercap">Triple Threat</div> </div></td>
     </tr>
 </table>
-</>
+
 </div>
