--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -166,7 +166,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 {% block background %}
     <style>
         body{
-            background-image: url("https://tryhardguides.com/wp-content/uploads/2021/08/emoticons-featured.png");
+             background-image: url("/static/assets/Fortnite/emoticons-featured.png");
         }
     </style>
 {% endblock %}
